# ML_pipeline

./: .gitignore  config.py  data_collection.py  data_preparation.py  db_model.py  housing.ipynb  main.py  model.py  model_service.py  pyproject.toml
src/: main.py
src/config/: config.py
src/db/: db_model.py  db_sqlite
src/model/: model_service.py
src/model/pipeline/: data_collection.py  data_preparation.py  model.py
