[project]
name = "ml-pipeline"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "notebook>=7.4.2",
    "pandas>=2.2.3",
    "pydantic==2.11.4",
    "pydantic-settings==2.9.1",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.40",
]
